--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
