--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^3.9.1",
     "jquery": "^3.6.0",
+    "ng2-charts": "^3.1.2",
     "ngx-mask": "^13.1.15",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
